Expand Advanced-Automation folder: all 50 files to 530-1643 lines each. Deep technical content with real-world techniques, code examples, and comprehensive methodologies.