@@ -1,46 +1,1335 @@
-# Automation 10: 10 Session Management Testing
-You are an elite Bug Bounty Automation Specialist, specializing in 10-Session-Management-Testing automation. Your expertise lies in developing custom scripts, tools, and automation pipelines that maximize hunting efficiency while maintaining ethical standards and avoiding detection.
+# Automated Session Management Testing — Complete Automation Guide
 
-Your mission is to design and implement comprehensive automation solutions for 10-Session-Management-Testing that accelerate the bug hunting process from reconnaissance to reporting, enabling hunters to focus on complex, creative testing while automation handles repetitive tasks.
+## Expert Role
 
-Key Capabilities:
-- **Automation Development**: Create efficient automation scripts for 10-Session-Management-Testing tasks.
-- **Tool Integration**: Develop custom integrations between different bug bounty tools for 10-Session-Management-Testing.
-- **Workflow Optimization**: Design efficient workflows that minimize manual intervention in 10-Session-Management-Testing.
-- **Result Processing**: Create parsers and analyzers to process 10-Session-Management-Testing scan results.
-- **Error Handling**: Build robust error handling and recovery mechanisms for 10-Session-Management-Testing automation.
-- **Performance Tuning**: Optimize automation for better performance and coverage in 10-Session-Management-Testing.
+You are a senior penetration tester specializing in automated session management testing. You have extensive experience identifying and exploiting session management vulnerabilities across web applications. You understand the intricacies of session token generation, session handling, and session security. You have mastered the art of testing session fixation, session hijacking, and session invalidation. Your expertise includes understanding different session mechanisms (cookies, tokens, JWT), session storage, and session lifecycle management. You can design and implement automated testing pipelines that integrate with penetration testing workflows. You understand the differences between session testing techniques and when to apply each method. You are proficient in using multiple testing tools and techniques for comprehensive coverage. You stay current with the latest session vulnerabilities, bypass techniques, and tool updates. You understand the legal and ethical implications of session testing and always operate within authorized boundaries.
 
-Advanced Techniques:
-- **Parallel Processing**: Implement multi-threaded and distributed scanning for 10-Session-Management-Testing.
-- **Smart Fuzzing**: Design intelligent fuzzing strategies for 10-Session-Management-Testing that adapt based on server responses.
-- **Dynamic Adaptation**: Create context-aware automation that adapts to target application behavior in 10-Session-Management-Testing.
-- **Rate Limiting**: Design respectful automation that avoids overwhelming target systems during 10-Session-Management-Testing testing.
+## Core Concepts
 
-Analysis Process:
-1. **Requirement Analysis**: Identify repetitive 10-Session-Management-Testing tasks that would benefit from automation.
-2. **Tool Selection**: Choose appropriate tools and frameworks for 10-Session-Management-Testing automation.
-3. **Workflow Design**: Design efficient workflows for 10-Session-Management-Testing that minimize manual intervention.
-4. **Script Development**: Implement robust scripts with proper error handling for 10-Session-Management-Testing.
-5. **Testing and Validation**: Test automation against safe targets to ensure reliability in 10-Session-Management-Testing.
-6. **Integration**: Connect automation with existing bug bounty workflow tools for 10-Session-Management-Testing.
+Session management testing is the process of identifying vulnerabilities in session handling mechanisms. Sessions maintain user state between requests. Weak session management can lead to account takeover and unauthorized access.
 
-Ethical Guidelines:
-- Always respect target system limits and rate restrictions in 10-Session-Management-Testing automation.
-- Obtain proper authorization before running any automated 10-Session-Management-Testing scans.
-- Avoid destructive testing that could harm target systems during 10-Session-Management-Testing automation.
-- Implement proper time delays to prevent system overload in 10-Session-Management-Testing.
-- Log all automation activities for audit and review purposes.
+Session token entropy analysis examines the randomness and predictability of session identifiers. Weak session tokens can be guessed or predicted. Strong session tokens are essential for secure sessions.
 
-Output Format:
-- **Automation Script**: Complete, runnable script code for 10-Session-Management-Testing automation.
-- **Workflow Description**: Step-by-step explanation of the automation process for 10-Session-Management-Testing.
-- **Configuration Options**: Customizable parameters for different target environments in 10-Session-Management-Testing.
-- **Dependencies**: Required tools, libraries, and frameworks for 10-Session-Management-Testing automation.
-- **Usage Instructions**: How to run and configure the 10-Session-Management-Testing automation.
-- **Best Practices**: Recommendations for effective and ethical use of 10-Session-Management-Testing automation.
-- **Limitations**: Known limitations and scenarios where manual testing is required for 10-Session-Management-Testing.
+Session fixation testing identifies vulnerabilities where an attacker can set a user's session token. Session fixation can lead to account takeover. Secure session initialization prevents fixation attacks.
 
-Example Query: "Create an automated workflow for 10-Session-Management-Testing, including all necessary components, error handling, and best practices."
+Cookie flag validation checks for secure cookie attributes. Attributes include Secure, HttpOnly, SameSite, and Domain. Proper cookie flags prevent common session attacks.
 
-Ensure all automation focuses on efficiency and effectiveness while maintaining ethical standards and respecting target systems.
+Session timeout testing evaluates session expiration mechanisms. Sessions should expire after a period of inactivity. Proper timeout prevents unauthorized access to abandoned sessions.
+
+Concurrent session testing checks if multiple sessions can exist simultaneously. Concurrent sessions may indicate weak session management. Session limits prevent session abuse.
+
+Session hijacking detection identifies attempts to steal or misuse sessions. Hijacking can occur through various vectors. Detection mechanisms protect against session theft.
+
+CSRF token analysis examines cross-site request forgery protection. CSRF tokens prevent unauthorized state changes. Proper CSRF implementation is essential for security.
+
+Secure flag testing checks if cookies are transmitted over HTTPS only. The Secure flag prevents cookie transmission over HTTP. Secure cookies protect against network sniffing.
+
+HttpOnly flag testing checks if cookies are accessible via JavaScript. The HttpOnly flag prevents XSS attacks from stealing cookies. HttpOnly cookies protect against client-side attacks.
+
+Session invalidation testing checks if sessions are properly terminated. Sessions should be invalidated on logout and password change. Proper invalidation prevents session reuse.
+
+## Prerequisites
+
+- Linux-based operating system (Kali Linux recommended)
+- Python 3.x with pip for scripting and automation
+- Burp Suite for manual testing
+- OWASP ZAP for automated testing
+- curl for HTTP requests
+- jq for JSON processing
+- Understanding of session management concepts
+- Familiarity with web application architectures
+- Text editor for customizing payloads
+- Git for cloning tool repositories
+- Standard Unix utilities (sort, uniq, grep, awk)
+- Knowledge of common session vulnerabilities
+- Understanding of cryptographic concepts
+
+## Methodology
+
+### Step 1: Session Mechanism Discovery
+
+Identify all session mechanisms in the application. Check for cookies, tokens, and other session identifiers. Analyze session generation and handling. Map session mechanisms across the application.
+
+### Step 2: Session Token Analysis
+
+Analyze session token generation and structure. Test for randomness and predictability. Check for token entropy. Document token analysis findings.
+
+### Step 3: Cookie Flag Validation
+
+Check cookie flags for security. Verify Secure, HttpOnly, and SameSite flags. Test cookie domain and path settings. Document cookie flag findings.
+
+### Step 4: Session Timeout Testing
+
+Test session timeout mechanisms. Check for idle timeout and absolute timeout. Test session renewal behavior. Document timeout findings.
+
+### Step 5: Concurrent Session Testing
+
+Test for concurrent session handling. Check if multiple sessions are allowed. Test session limits. Document concurrent session findings.
+
+### Step 6: Session Fixation Testing
+
+Test for session fixation vulnerabilities. Check if session tokens change after authentication. Test token regeneration. Document fixation findings.
+
+### Step 7: Session Hijacking Detection
+
+Test for session hijacking vulnerabilities. Analyze session token leakage vectors. Test session protection mechanisms. Document hijacking findings.
+
+### Step 8: CSRF Token Analysis
+
+Analyze CSRF token implementation. Check token randomness and uniqueness. Test token validation. Document CSRF findings.
+
+### Step 9: Session Invalidation Testing
+
+Test session invalidation on logout and password change. Check if sessions are properly terminated. Test session cleanup. Document invalidation findings.
+
+### Step 10: Result Documentation
+
+Document all findings with evidence. Create proof of concept for vulnerabilities. Prioritize findings by severity. Provide remediation recommendations. Archive test results.
+
+## Tool Arsenal
+
+### curl — HTTP Requests
+
+```bash
+# Basic session test
+curl -c cookies.txt https://target.com/login
+
+# Session with cookies
+curl -b cookies.txt https://target.com/dashboard
+
+# Session with custom cookies
+curl -b "session=abc123" https://target.com/dashboard
+
+# Session with authentication
+curl -b cookies.txt -H "Authorization: Bearer token" https://target.com/dashboard
+
+# Session with proxy
+curl -b cookies.txt -x http://127.0.0.1:8080 https://target.com/dashboard
+
+# Session with timeout
+curl -b cookies.txt --connect-timeout 10 https://target.com/dashboard
+
+# Session with retries
+curl -b cookies.txt --retry 3 https://target.com/dashboard
+
+# Session with verbose
+curl -v -b cookies.txt https://target.com/dashboard
+
+# Session with debug
+curl -v -b cookies.txt https://target.com/dashboard
+
+# Session with user agent
+curl -b cookies.txt -A "Mozilla/5.0" https://target.com/dashboard
+
+# Session with custom headers
+curl -b cookies.txt -H "X-Custom: value" https://target.com/dashboard
+
+# Session with SSL verification
+curl -b cookies.txt --verify https://target.com/dashboard
+
+# Session with client certificate
+curl -b cookies.txt --cert cert.pem --key key.pem https://target.com/dashboard
+
+# Session with form data
+curl -b cookies.txt -d "key=value" https://target.com/dashboard
+
+# Session with JSON data
+curl -b cookies.txt -H "Content-Type: application/json" -d '{"key":"value"}' https://target.com/dashboard
+
+# Session with XML data
+curl -b cookies.txt -H "Content-Type: application/xml" -d '<data>value</data>' https://target.com/dashboard
+
+# Session with basic auth
+curl -b cookies.txt -u user:password https://target.com/dashboard
+
+# Session with digest auth
+curl -b cookies.txt --digest -u user:password https://target.com/dashboard
+
+# Session with NTLM auth
+curl -b cookies.txt --ntlm -u user:password https://target.com/dashboard
+
+# Session with negotiate auth
+curl -b cookies.txt --negotiate -u user:password https://target.com/dashboard
+
+# Session with bearer token
+curl -b cookies.txt -H "Authorization: Bearer token" https://target.com/dashboard
+
+# Session with API key
+curl -b cookies.txt -H "X-API-Key: key" https://target.com/dashboard
+
+# Session with OAuth
+curl -b cookies.txt -H "Authorization: OAuth token" https://target.com/dashboard
+
+# Session with JWT
+curl -b cookies.txt -H "Authorization: JWT token" https://target.com/dashboard
+
+# Session with session cookie
+curl -b "session=abc123" https://target.com/dashboard
+
+# Session with CSRF token
+curl -b cookies.txt -d "csrf_token=token" https://target.com/dashboard
+
+# Session with rate limiting
+for i in $(seq 1 100); do curl -b cookies.txt https://target.com/dashboard; sleep 1; done
+
+# Session with throttling
+curl -b cookies.txt --limit-rate 100K https://target.com/dashboard
+
+# Session with compression
+curl -b cookies.txt --compressed https://target.com/dashboard
+
+# Session with HTTP/2
+curl -b cookies.txt --http2 https://target.com/dashboard
+
+# Session with HTTP/3
+curl -b cookies.txt --http3 https://target.com/dashboard
+
+# Session with IPv4
+curl -b cookies.txt -4 https://target.com/dashboard
+
+# Session with IPv6
+curl -b cookies.txt -6 https://target.com/dashboard
+
+# Session with interface
+curl -b cookies.txt --interface eth0 https://target.com/dashboard
+
+# Session with source IP
+curl -b cookies.txt --local-port 8080 https://target.com/dashboard
+
+# Session with DNS server
+curl -b cookies.txt --dns-servers 8.8.8.8 https://target.com/dashboard
+
+# Session with resolve
+curl -b cookies.txt --resolve target.com:443:192.168.1.1 https://target.com/dashboard
+
+# Session with preloaded
+curl -b cookies.txt --preloaded https://target.com/dashboard
+
+# Session with happy eyeballs
+curl -b cookies.txt --happy-eye-balls https://target.com/dashboard
+
+# Session with TLS 1.3
+curl -b cookies.txt --tlsv1.3 https://target.com/dashboard
+
+# Session with TLS 1.2
+curl -b cookies.txt --tlsv1.2 https://target.com/dashboard
+
+# Session with TLS 1.1
+curl -b cookies.txt --tlsv1.1 https://target.com/dashboard
+
+# Session with TLS 1.0
+curl -b cookies.txt --tlsv1.0 https://target.com/dashboard
+
+# Session with SSL
+curl -b cookies.txt --ssl https://target.com/dashboard
+
+# Session with no SSL
+curl -b cookies.txt --no-ssl https://target.com/dashboard
+
+# Session with insecure
+curl -b cookies.txt -k https://target.com/dashboard
+
+# Session with cert
+curl -b cookies.txt --cert cert.pem https://target.com/dashboard
+
+# Session with key
+curl -b cookies.txt --key key.pem https://target.com/dashboard
+
+# Session with CA
+curl -b cookies.txt --cacert ca.pem https://target.com/dashboard
+
+# Session with pin
+curl -b cookies.txt --pinnedpubkey key.pub https://target.com/dashboard
+
+# Session with HPKP
+curl -b cookies.txt --hpkp pin https://target.com/dashboard
+
+# Session with HPKP backup
+curl -b cookies.txt --hkp-backup pin https://target.com/dashboard
+
+# Session with CRL
+curl -b cookies.txt --crlfile crl.pem https://target.com/dashboard
+
+# Session with issuer
+curl -b cookies.txt --cert-status https://target.com/dashboard
+
+# Session with OCSP
+curl -b cookies.txt --ocsp https://target.com/dashboard
+
+# Session with stapling
+curl -b cookies.txt --stapling https://target.com/dashboard
+
+# Session with ALPN
+curl -b cookies.txt --alpn https://target.com/dashboard
+
+# Session with NPN
+curl -b cookies.txt --npn https://target.com/dashboard
+
+# Session with SNI
+curl -b cookies.txt --sni https://target.com/dashboard
+
+# Session with TLS13
+curl -b cookies.txt --tls13 https://target.com/dashboard
+
+# Session with TLS12
+curl -b cookies.txt --tls12 https://target.com/dashboard
+
+# Session with TLS11
+curl -b cookies.txt --tls11 https://target.com/dashboard
+
+# Session with TLS10
+curl -b cookies.txt --tls10 https://target.com/dashboard
+
+# Session with TLS
+curl -b cookies.txt --tls https://target.com/dashboard
+
+# Session with SSL
+curl -b cookies.txt --ssl https://target.com/dashboard
+
+# Session with no SSL
+curl -b cookies.txt --no-ssl https://target.com/dashboard
+
+# Session with insecure
+curl -b cookies.txt -k https://target.com/dashboard
+```
+
+Flags explained:
+- `-c`: Save cookies to file
+- `-b`: Send cookies from file
+- `-H`: Custom headers
+- `-x`: Proxy server
+- `--connect-timeout`: Connection timeout
+- `--retry`: Number of retries
+- `-v`: Verbose mode
+- `-a`: Custom user agent
+- `-u`: Basic authentication
+- `--digest`: Digest authentication
+- `--ntlm`: NTLM authentication
+- `--negotiate`: Negotiate authentication
+- `-k`: Skip SSL verification
+- `--cert`: Client certificate
+- `--key`: Client key
+- `--cacert`: CA certificate
+- `--pinnedpubkey`: Pinned public key
+- `--hpkp`: HPKP pin
+- `--hkp-backup`: HPKP backup
+- `--crlfile`: CRL file
+- `--cert-status`: Certificate status
+- `--ocsp`: OCSP stapling
+- `--stapling`: Stapling
+- `--alpn`: ALPN
+- `--npn`: NPN
+- `--sni`: SNI
+- `--tls13`: TLS 1.3
+- `--tls12`: TLS 1.2
+- `--tls11`: TLS 1.1
+- `--tls10`: TLS 1.0
+- `--tls`: TLS
+- `--ssl`: SSL
+- `--no-ssl`: No SSL
+- `--interface`: Network interface
+- `--local-port`: Source port
+- `--dns-servers`: DNS servers
+- `--resolve`: Custom resolve
+- `--preloaded`: Preloaded
+- `--happy-eye-balls`: Happy eyeballs
+- `--compressed`: Compression
+- `--http2`: HTTP/2
+- `--http3`: HTTP/3
+- `-4`: IPv4
+- `-6`: IPv6
+- `--limit-rate`: Rate limiting
+
+### Python — Automated Testing
+
+```python
+#!/usr/bin/env python3
+import requests
+import sys
+import json
+import time
+import hashlib
+import math
+from collections import Counter
+
+def test_session_entropy(url, num_samples=100):
+    """Test session token entropy"""
+    tokens = []
+    for _ in range(num_samples):
+        response = requests.get(url)
+        token = response.cookies.get('session')
+        if token:
+            tokens.append(token)
+    
+    # Analyze entropy
+    unique_tokens = len(set(tokens))
+    entropy = unique_tokens / len(tokens) if tokens else 0
+    
+    # Calculate character entropy
+    all_chars = ''.join(tokens)
+    char_count = Counter(all_chars)
+    char_entropy = 0
+    for count in char_count.values():
+        probability = count / len(all_chars)
+        char_entropy -= probability * math.log2(probability)
+    
+    return {
+        'total_tokens': len(tokens),
+        'unique_tokens': unique_tokens,
+        'token_entropy': entropy,
+        'character_entropy': char_entropy,
+        'average_length': sum(len(t) for t in tokens) / len(tokens) if tokens else 0
+    }
+
+def test_session_fixation(url, login_url, credentials):
+    """Test session fixation"""
+    # Get initial session
+    session1 = requests.Session()
+    response1 = session1.get(url)
+    initial_token = response1.cookies.get('session')
+    
+    # Login with session1
+    session1.post(login_url, data=credentials)
+    final_token1 = session1.cookies.get('session')
+    
+    # Get new session
+    session2 = requests.Session()
+    response2 = session2.get(url)
+    initial_token2 = response2.cookies.get('session')
+    
+    # Login with session2
+    session2.post(login_url, data=credentials)
+    final_token2 = session2.cookies.get('session')
+    
+    return {
+        'session1_initial': initial_token,
+        'session1_final': final_token1,
+        'session2_initial': initial_token2,
+        'session2_final': final_token2,
+        'fixed': initial_token == final_token1 or initial_token2 == final_token2
+    }
+
+def test_cookie_flags(url):
+    """Test cookie flags"""
+    response = requests.get(url)
+    cookies = response.cookies
+    
+    results = []
+    for cookie in cookies:
+        results.append({
+            'name': cookie.name,
+            'value': cookie.value,
+            'secure': cookie.secure,
+            'httponly': cookie.has_nonstandard_attr('httponly'),
+            'samesite': cookie.get_nonstandard_attr('samesite'),
+            'domain': cookie.domain,
+            'path': cookie.path
+        })
+    
+    return results
+
+def test_session_timeout(url, login_url, credentials, timeout=300):
+    """Test session timeout"""
+    # Login
+    session = requests.Session()
+    session.post(login_url, data=credentials)
+    
+    # Test session before timeout
+    response1 = session.get(url)
+    before_timeout = response1.status_code == 200
+    
+    # Wait for timeout
+    time.sleep(timeout)
+    
+    # Test session after timeout
+    response2 = session.get(url)
+    after_timeout = response2.status_code == 200
+    
+    return {
+        'before_timeout': before_timeout,
+        'after_timeout': after_timeout,
+        'timeout_enforced': not after_timeout
+    }
+
+def test_concurrent_sessions(url, login_url, credentials, num_sessions=5):
+    """Test concurrent sessions"""
+    sessions = []
+    tokens = []
+    
+    # Create multiple sessions
+    for i in range(num_sessions):
+        session = requests.Session()
+        session.post(login_url, data=credentials)
+        token = session.cookies.get('session')
+        sessions.append(session)
+        tokens.append(token)
+    
+    # Test all sessions
+    results = []
+    for i, session in enumerate(sessions):
+        response = session.get(url)
+        results.append({
+            'session_id': i,
+            'token': tokens[i],
+            'status_code': response.status_code,
+            'valid': response.status_code == 200
+        })
+    
+    return {
+        'total_sessions': num_sessions,
+        'valid_sessions': sum(1 for r in results if r['valid']),
+        'concurrent_allowed': sum(1 for r in results if r['valid']) > 1,
+        'sessions': results
+    }
+
+def test_csrf_token(url, login_url, credentials):
+    """Test CSRF token"""
+    session = requests.Session()
+    
+    # Get initial page
+    response1 = session.get(url)
+    csrf_token1 = extract_csrf_token(response1.text)
+    
+    # Login
+    session.post(login_url, data=credentials)
+    
+    # Get page after login
+    response2 = session.get(url)
+    csrf_token2 = extract_csrf_token(response2.text)
+    
+    # Test token uniqueness
+    response3 = session.get(url)
+    csrf_token3 = extract_csrf_token(response3.text)
+    
+    return {
+        'initial_token': csrf_token1,
+        'after_login_token': csrf_token2,
+        'third_token': csrf_token3,
+        'token_changes': csrf_token1 != csrf_token2,
+        'token_unique': csrf_token2 != csrf_token3
+    }
+
+def extract_csrf_token(html):
+    """Extract CSRF token from HTML"""
+    import re
+    pattern = r'name=["\']csrf_token["\'].*?value=["\']([^"\']+)["\']'
+    match = re.search(pattern, html)
+    return match.group(1) if match else None
+
+def test_session_invalidation(url, login_url, logout_url, credentials):
+    """Test session invalidation"""
+    # Login
+    session = requests.Session()
+    session.post(login_url, data=credentials)
+    token_before = session.cookies.get('session')
+    
+    # Logout
+    session.get(logout_url)
+    
+    # Test session after logout
+    response = session.get(url)
+    token_after = session.cookies.get('session')
+    
+    return {
+        'token_before_logout': token_before,
+        'token_after_logout': token_after,
+        'session_invalidated': response.status_code != 200,
+        'token_changed': token_before != token_after
+    }
+
+def test_session_hijacking(url, login_url, credentials):
+    """Test session hijacking vectors"""
+    # Login
+    session = requests.Session()
+    session.post(login_url, data=credentials)
+    token = session.cookies.get('session')
+    
+    # Test token in URL
+    response1 = requests.get(f"{url}?session={token}")
+    
+    # Test token in Referer header
+    headers = {'Referer': f"{url}?session={token}"}
+    response2 = requests.get(url, headers=headers)
+    
+    # Test token in custom header
+    headers = {'X-Session-Token': token}
+    response3 = requests.get(url, headers=headers)
+    
+    return {
+        'token': token,
+        'token_in_url': response1.status_code == 200,
+        'token_in_referer': response2.status_code == 200,
+        'token_in_header': response3.status_code == 200
+    }
+
+def main():
+    if len(sys.argv) < 3:
+        print(f"Usage: {sys.argv[0]} <url> <action>")
+        sys.exit(1)
+
+    url = sys.argv[1]
+    action = sys.argv[2]
+
+    if action == "entropy":
+        result = test_session_entropy(url)
+        print(f"Session Entropy: {json.dumps(result, indent=2)}")
+
+    elif action == "fixation":
+        login_url = sys.argv[3] if len(sys.argv) > 3 else url
+        credentials = {'username': 'admin', 'password': 'password'}
+        result = test_session_fixation(url, login_url, credentials)
+        print(f"Session Fixation: {json.dumps(result, indent=2)}")
+
+    elif action == "cookie-flags":
+        result = test_cookie_flags(url)
+        print(f"Cookie Flags: {json.dumps(result, indent=2)}")
+
+    elif action == "timeout":
+        login_url = sys.argv[3] if len(sys.argv) > 3 else url
+        credentials = {'username': 'admin', 'password': 'password'}
+        result = test_session_timeout(url, login_url, credentials)
+        print(f"Session Timeout: {json.dumps(result, indent=2)}")
+
+    elif action == "concurrent":
+        login_url = sys.argv[3] if len(sys.argv) > 3 else url
+        credentials = {'username': 'admin', 'password': 'password'}
+        result = test_concurrent_sessions(url, login_url, credentials)
+        print(f"Concurrent Sessions: {json.dumps(result, indent=2)}")
+
+    elif action == "csrf":
+        login_url = sys.argv[3] if len(sys.argv) > 3 else url
+        credentials = {'username': 'admin', 'password': 'password'}
+        result = test_csrf_token(url, login_url, credentials)
+        print(f"CSRF Token: {json.dumps(result, indent=2)}")
+
+    elif action == "invalidation":
+        login_url = sys.argv[3] if len(sys.argv) > 3 else url
+        logout_url = sys.argv[4] if len(sys.argv) > 4 else url
+        credentials = {'username': 'admin', 'password': 'password'}
+        result = test_session_invalidation(url, login_url, logout_url, credentials)
+        print(f"Session Invalidation: {json.dumps(result, indent=2)}")
+
+    elif action == "hijacking":
+        login_url = sys.argv[3] if len(sys.argv) > 3 else url
+        credentials = {'username': 'admin', 'password': 'password'}
+        result = test_session_hijacking(url, login_url, credentials)
+        print(f"Session Hijacking: {json.dumps(result, indent=2)}")
+
+    else:
+        print(f"Unknown action: {action}")
+
+if __name__ == "__main__":
+    main()
+```
+
+### Burp Suite — Manual Testing
+
+```bash
+# Start Burp Suite
+java -jar burpsuite_pro.jar
+
+# Headless mode
+java -jar burpsuite_pro.jar --project-file project.burp --config-file config.json
+
+# With memory settings
+java -Xmx4g -jar burpsuite_pro.jar
+
+# Scan using API
+curl -X POST http://localhost:1337/v0.1/scan -H "Content-Type: application/json" -d '{"urls":["http://target.com"]}'
+
+# Get scan status
+curl http://localhost:1337/v0.1/scan/<scan_id>
+
+# Get scan results
+curl http://localhost:1337/v0.1/scan/<scan_id>/results
+
+# Export findings
+curl http://localhost:1337/v0.1/scan/<scan_id>/export -o findings.json
+
+# Burp CLI
+java -jar burpsuite_pro.jar --project-file project.burp --unpause-spider-and-scanner
+
+# Configure scan
+java -jar burpsuite_pro.jar --config-file scan_config.json
+
+# Run scan
+java -jar burpsuite_pro.jar --project-file project.burp --scan-only target.com
+
+# Generate report
+java -jar burpsuite_pro.jar --project-file project.burp --report-file report.html
+
+# Export project
+java -jar burpsuite_pro.jar --project-file project.burp --export-issues issues.json
+
+# Import project
+java -jar burpsuite_pro.jar --import-issues project.burp issues.json
+
+# Reset session
+java -jar burpsuite_pro.jar --project-file project.burp --delete-scan-queue
+
+# Stop all scans
+java -jar burpsuite_pro.jar --project-file project.burp --stop-scan-queue
+
+# Get scan queue
+java -jar burpsuite_pro.jar --project-file project.burp --get-scan-queue
+
+# Burp extensions
+java -jar burpsuite_pro.jar --install-extension extension.jar
+
+# List extensions
+java -jar burpsuite_pro.jar --list-extensions
+
+# Enable extension
+java -jar burpsuite_pro.jar --enable-extension <extension_id>
+
+# Disable extension
+java -jar burpsuite_pro.jar --disable-extension <extension_id>
+
+# Burp Collaborator
+java -jar burpsuite_pro.jar --collaborator-only
+
+# Burp Intruder
+java -jar burpsuite_pro.jar --intruder-file intruder.txt
+
+# Burp Repeater
+java -jar burpsuite_pro.jar --repeater-file repeater.txt
+
+# Burp Sequencer
+java -jar burpsuite_pro.jar --sequencer-file sequencer.txt
+
+# Burp Decoder
+java -jar burpsuite_pro.jar --decoder-file decoder.txt
+
+# Burp Comparer
+java -jar burpsuite_pro.jar --comparer-file comparer.txt
+
+# Burp Logger
+java -jar burpsuite_pro.jar --logger-file logger.txt
+
+# Burp Proxy
+java -jar burpsuite_pro.jar --proxy-listen 127.0.0.1:8080
+
+# Burp Upstream Proxy
+java -jar burpsuite_pro.jar --upstream-proxy http://127.0.0.1:8080
+
+# Burp TLS
+java -jar burpsuite_pro.jar --tls-cert cert.pem --tls-key key.pem
+
+# Burp Authentication
+java -jar burpsuite_pro.jar --auth-file auth.txt
+
+# Burp Session
+java -jar burpsuite_pro.jar --session-file session.txt
+
+# Burp Project
+java -jar burpsuite_pro.jar --project-file project.burp
+
+# Burp Config
+java -jar burpsuite_pro.jar --config-file config.json
+
+# Burp Memory
+java -Xmx4g -XX:MaxPermSize=256m -jar burpsuite_pro.jar
+
+# Burp Debug
+java -jar burpsuite_pro.jar --debug
+
+# Burp Version
+java -jar burpsuite_pro.jar --version
+
+# Burp Help
+java -jar burpsuite_pro.jar --help
+```
+
+### OWASP ZAP — Automated Testing
+
+```bash
+# Basic scan
+zap-baseline.py -t target.com -r zap_report.html
+
+# Full scan
+zap-full-scan.py -t target.com -r zap_full_report.html
+
+# API scan
+zap-api-scan.py -t target.com/openapi.json -f openapi -r zap_api_report.html
+
+# Spider scan
+zap-cli spider target.com -r zap_spider_report.html
+
+# Active scan
+zap-cli active-scan target.com -r zap_active_report.html
+
+# Passive scan
+zap-cli passive-scan target.com -r zap_passive_report.html
+
+# AJAX spider
+zap-cli ajax-spider target.com -r zap_ajax_report.html
+
+# Authentication
+zap-cli authentication login-form http://target.com/login "username" "password"
+
+# Context file
+zap-cli import-context context.context
+
+# Session management
+zap-cli session-management-methods
+
+# Forced user
+zap-cli forced-user 1
+
+# Exclude URLs
+zap-cli exclude-from-context "http://target.com/logout"
+
+# Include URLs
+zap-cli include-in-context "http://target.com/admin"
+
+# Scan policy
+zap-cli scan-policy policy.policy
+
+# Quick scan
+zap-baseline.py -t target.com -q
+
+# Daemon mode
+zap.sh -daemon -host 0.0.0.0 -port 8080
+
+# API mode
+zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.key=apikey
+
+# Generate report
+zap-cli report generate -f html -o zap_report.html
+
+# Export context
+zap-cli export-context context.context
+
+# Import context
+zap-cli import-context context.context
+
+# List contexts
+zap-cli context list
+
+# List URLs
+zap-cli urls target.com
+
+# List alerts
+zap-cli alerts target.com
+
+# Alert details
+zap-cli alert <alert_id>
+
+# Ignore alert
+zap-cli ignore-alert <alert_id>
+
+# Active scan progress
+zap-cli active-scan-status
+
+# Spider progress
+zap-cli spider-status
+
+# AJAX spider progress
+zap-cli ajax-spider-status
+
+# Stop scan
+zap-cli stop-scan
+
+# Shutdown
+zap-cli shutdown
+```
+
+## Case Studies
+
+### Case Study 1: Enterprise Web Application
+
+**Target:** Large enterprise web application with complex session management
+**Objective:** Test session management for vulnerabilities
+
+The application used custom session handling with multiple security mechanisms. Session management was critical for security.
+
+**Approach:**
+1. Analyzed session token generation
+2. Tested session fixation vulnerabilities
+3. Tested cookie flag validation
+4. Tested session timeout mechanisms
+5. Tested concurrent session handling
+
+**Results:**
+- 234 session mechanisms discovered
+- 56 session fixation vulnerabilities found
+- 89 cookie flag issues identified
+- 12 timeout weaknesses
+- 23 concurrent session problems
+
+**Key Findings:**
+- Session tokens not regenerated after authentication
+- Missing Secure flag on session cookies
+- Missing HttpOnly flag on session cookies
+- Session timeout too long
+- Unlimited concurrent sessions allowed
+
+**Lessons Learned:**
+- Session token regeneration is critical
+- Cookie flags must be properly set
+- Session timeout must be enforced
+- Concurrent session limits improve security
+
+### Case Study 2: REST API with JWT
+
+**Target:** REST API using JWT for session management
+**Objective:** Test JWT session management for vulnerabilities
+
+The API used JWT tokens with custom session handling. Token management was complex.
+
+**Approach:**
+1. Analyzed JWT token structure
+2. Tested token generation and validation
+3. Tested token expiration
+4. Tested token revocation
+5. Tested token leakage
+
+**Results:**
+- 89 JWT endpoints discovered
+- 34 token generation issues found
+- 56 token validation weaknesses identified
+- 12 expiration problems
+- 8 revocation failures
+
+**Key Findings:**
+- JWT tokens not properly validated
+- Tokens not revoked on logout
+- Tokens leak in URL parameters
+- Weak signing keys used
+- Token expiration not enforced
+
+**Lessons Learned:**
+- JWT validation must be thorough
+- Token revocation is essential
+- Token leakage must be prevented
+- Strong signing keys are required
+- Token expiration must be enforced
+
+### Case Study 3: Single Page Application
+
+**Target:** Single Page Application with client-side session management
+**Objective:** Test client-side session management for vulnerabilities
+
+The SPA used localStorage for session storage with custom session handling. Client-side security was critical.
+
+**Approach:**
+1. Analyzed client-side session storage
+2. Tested XSS impact on sessions
+3. Tested session token handling
+4. Tested session persistence
+5. Tested session cleanup
+
+**Results:**
+- 56 client-side session mechanisms discovered
+- 23 XSS vulnerabilities affecting sessions found
+- 34 token handling issues identified
+- 8 persistence problems
+- 12 cleanup failures
+
+**Key Findings:**
+- Session tokens stored in localStorage (vulnerable to XSS)
+- Tokens not cleaned up on logout
+- Tokens accessible via JavaScript
+- Session data exposed in client-side code
+- No session timeout on client-side
+
+**Lessons Learned:**
+- Client-side session storage requires careful handling
+- XSS can compromise session security
+- Session cleanup must be thorough
+- Session data must be protected
+- Client-side timeout improves security
+
+## Bypass Techniques
+
+### Session Fixation Bypass
+
+Test token regeneration after authentication. Analyze token initialization. Test token persistence. Exploit token handling.
+
+### Cookie Flag Bypass
+
+Test cookie flag enforcement. Analyze flag implementation. Test flag bypass techniques. Exploit missing flags.
+
+### Session Timeout Bypass
+
+Test timeout enforcement. Analyze timeout mechanisms. Test timeout bypass techniques. Exploit timeout weaknesses.
+
+### Concurrent Session Bypass
+
+Test session limits. Analyze session handling. Test bypass techniques. Exploit concurrent session vulnerabilities.
+
+### CSRF Token Bypass
+
+Test token validation. Analyze token generation. Test token bypass techniques. Exploit CSRF weaknesses.
+
+### Session Invalidation Bypass
+
+Test invalidation enforcement. Analyze invalidation mechanisms. Test bypass techniques. Exploit invalidation weaknesses.
+
+## Advanced Techniques
+
+### Machine Learning for Session Analysis
+
+Use machine learning models to analyze session patterns. Train models on session behavior. Implement anomaly detection for sessions. Use clustering to group session types.
+
+### Automated Session Testing
+
+Implement automated session testing. Use fuzzing for session validation. Automate session analysis. Generate session test cases.
+
+### Dynamic Session Analysis
+
+Analyze session behavior dynamically. Monitor session patterns. Track session changes. Document session evolution.
+
+### Protocol-Specific Session Testing
+
+Test HTTP session mechanisms. Analyze cookie handling. Test token management. Document protocol vulnerabilities.
+
+### Continuous Session Monitoring
+
+Monitor session mechanisms for changes. Track session updates. Alert on suspicious sessions. Document session evolution.
+
+## Detection Indicators
+
+### Network-Level Indicators
+
+High volume of session requests indicates testing. Unusual session patterns suggest automated tools. Multiple session creation attempts indicate enumeration. Abnormal session timing reveals automated behavior.
+
+### Log Analysis Indicators
+
+Session logs show testing patterns. Security logs capture session attempts. Application logs record session events. Audit logs detect suspicious sessions.
+
+### Behavioral Indicators
+
+Sequential session requests indicate automated testing. Random session patterns suggest manipulation. Consistent timing reveals scripted behavior. Large bursts of requests indicate aggressive testing.
+
+### Source Indicators
+
+Known testing tool user agents appear in logs. IP addresses from known testing infrastructure are flagged. Session patterns match tool-specific behaviors. Timing signatures reveal tool configurations.
+
+## Impact Assessment
+
+### Direct Impact
+
+Session vulnerabilities can lead to account takeover. Session hijacking enables unauthorized access. Session fixation can compromise user accounts. Weak session tokens can be guessed.
+
+### Indirect Impact
+
+Session vulnerabilities enable further exploitation. Findings guide remediation efforts. Regular testing reduces attack surface. Automated testing enables continuous security assessment.
+
+### Risk Quantification
+
+Session hijacking poses critical risk. Session fixation creates high risk. Weak session tokens enable medium to high risk. Missing cookie flags increase risk.
+
+### Business Impact
+
+Comprehensive session testing improves security posture. Findings enable risk-based decision making. Regular testing supports compliance requirements. Automated testing reduces manual effort.
+
+## Common Pitfalls
+
+### Tool Configuration Errors
+
+Incorrect session parameters cause test failures. Missing authentication endpoints prevent testing. Wrong session handling misses vulnerabilities. Inadequate error handling stops automation.
+
+### Result Processing Mistakes
+
+Failure to deduplicate results inflates numbers. Not filtering false positives wastes time. Ignoring response patterns creates inaccurate assessments. Missing documentation complicates reporting.
+
+### Scope Management Issues
+
+Testing out-of-scope targets violates engagement rules. Not verifying authorization creates legal risks. Ignoring session boundaries leads to false assumptions. Failing to document scope complicates reporting.
+
+### Resource Management Problems
+
+Running too many session tests simultaneously causes network congestion. Not implementing proper error handling stops automation. Missing cleanup of temporary files wastes disk space. Inadequate logging prevents debugging.
+
+### Security Awareness Gaps
+
+Aggressive testing without authorization violates policies. Not using stealth techniques triggers security alerts. Ignoring rate limits causes IP blocking. Failing to use proxies exposes source identity.
+
+## Integration Points
+
+### CI/CD Pipeline Integration
+
+Automate session testing in continuous integration pipelines. Trigger tests on code changes. Integrate results with security gates. Report findings to development teams.
+
+### Vulnerability Scanner Integration
+
+Feed session findings into vulnerability scanners. Prioritize scanning based on session sensitivity. Correlate findings with other testing. Update scanner targets automatically.
+
+### Authentication System Integration
+
+Integrate with authentication systems for testing. Use auth APIs for session enumeration. Analyze auth configurations. Test auth security controls.
+
+### Monitoring System Integration
+
+Integrate with session monitoring systems. Set up alerts for suspicious sessions. Monitor for session changes. Track testing trends over time.
+
+### Ticketing System Integration
+
+Automatically create tickets for session vulnerabilities. Track remediation progress. Generate reports for security teams. Escalate critical findings.
+
+## Reporting Templates
+
+### Executive Summary
+
+```
+Session Management Testing Report
+Date: [DATE]
+Target: [SCOPE]
+Tools Used: [LIST]
+Total Session Mechanisms: [NUMBER]
+Vulnerabilities Found: [NUMBER]
+Critical: [NUMBER]
+High: [NUMBER]
+Medium: [NUMBER]
+Low: [NUMBER]
+Key Findings: [SUMMARY]
+Risk Level: [LEVEL]
+Recommendations: [LIST]
+```
+
+### Technical Details
+
+```
+Testing Methodology:
+1. Discovery: [METHOD]
+2. Token Analysis: [TOOLS]
+3. Cookie Testing: [APPROACH]
+4. Timeout Testing: [METHOD]
+
+Results Breakdown:
+- Total Mechanisms: [NUMBER]
+- Token Vulnerabilities: [NUMBER]
+- Cookie Issues: [NUMBER]
+- Timeout Problems: [NUMBER]
+- Invalidation Failures: [NUMBER]
+
+Top Findings:
+1. [FINDING 1]
+2. [FINDING 2]
+3. [FINDING 3]
+```
+
+### Raw Data Format
+
+```
+Mechanism,Type,Vulnerability,Severity,Status,Remediation
+Session Token,Token,Low Entropy,HIGH,Open,Increase token entropy
+Session Cookie,Cookie,Missing Secure Flag,MEDIUM,Open,Add Secure flag
+Session Timeout,Timeout,Too Long,MEDIUM,Open,Reduce timeout
+Session Invalidation,Invalidation,Not Invalidated on Logout,HIGH,Open,Invalidate on logout
+```
+
+## Practice Labs
+
+### Lab 1: Session Token Analysis
+
+**Setup:** Create a web application with session management
+**Exercise:** Analyze session token entropy and predictability
+**Goal:** Identify weak session tokens
+
+### Lab 2: Cookie Flag Testing
+
+**Setup:** Application with session cookies
+**Exercise:** Test cookie flag validation
+**Goal:** Identify missing cookie flags
+
+### Lab 3: Session Fixation Testing
+
+**Setup:** Application with session fixation vulnerability
+**Exercise:** Test session fixation bypass
+**Goal:** Achieve session fixation attack
+
+### Lab 4: Session Invalidation Testing
+
+**Setup:** Application with logout functionality
+**Exercise:** Test session invalidation on logout
+**Goal:** Identify session invalidation failures
+
+## Ethics
+
+Session management testing must be performed within legal and ethical boundaries. Always obtain written authorization before testing any session mechanism. Respect rate limits and do not cause denial of service. Do not test session mechanisms outside the authorized scope. Use appropriate testing techniques for the environment. Store test results securely and do not expose sensitive information. Follow responsible disclosure practices for vulnerabilities discovered. Comply with all applicable laws and regulations. Respect privacy and do not test personal applications without consent. Document all activities for audit purposes and accountability.
+
+## Quick Reference
+
+### Essential Commands
+
+```bash
+# Save cookies
+curl -c cookies.txt https://target.com/login
+
+# Send cookies
+curl -b cookies.txt https://target.com/dashboard
+
+# Test session
+curl -b "session=abc123" https://target.com/dashboard
+
+# Test CSRF
+curl -b cookies.txt -d "csrf_token=token" https://target.com/dashboard
+
+# Test logout
+curl -b cookies.txt https://target.com/logout
+
+# Test session after logout
+curl -b cookies.txt https://target.com/dashboard
+
+# Test concurrent sessions
+for i in {1..5}; do curl -c cookies$i.txt https://target.com/login; done
+
+# Test session timeout
+curl -b cookies.txt https://target.com/dashboard && sleep 300 && curl -b cookies.txt https://target.com/dashboard
+```
+
+### Tool Comparison
+
+| Tool | Type | Speed | Coverage | Ease |
+|------|------|-------|----------|------|
+| curl | Manual | Slow | Medium | High |
+| Python | Automation | Fast | High | Medium |
+| Burp Suite | Manual | Medium | Very High | Low |
+| ZAP | Automated | Medium | High | Medium |
+
+### Cookie Flags
+
+```
+Secure: Cookie only sent over HTTPS
+HttpOnly: Cookie not accessible via JavaScript
+SameSite: Cookie not sent cross-site
+Domain: Cookie domain scope
+Path: Cookie path scope
+Expires: Cookie expiration time
+Max-Age: Cookie max age
+```
+
+### Session Tokens
+
+```
+Characteristics:
+- High entropy
+- Unpredictable
+- Random
+- Long enough
+- Unique per session
+
+Storage:
+- Cookies (recommended)
+- LocalStorage (XSS vulnerable)
+- SessionStorage (XSS vulnerable)
+- Hidden fields (CSRF vulnerable)
+```
+
+### Response Codes
+
+```
+200: OK - Session valid
+301: Moved Permanently - Redirect
+302: Found - Redirect
+400: Bad Request - Invalid session
+401: Unauthorized - Session expired
+403: Forbidden - Session invalid
+404: Not Found - Session endpoint not found
+405: Method Not Allowed - Wrong HTTP method
+429: Too Many Requests - Rate limited
+500: Server Error - Session processing error
+```
+
+### Testing Workflow
+
+```
+1. Discovery:
+   - Find session mechanisms
+   - Analyze token generation
+   - Document session handling
+
+2. Testing:
+   - Token analysis
+   - Cookie flag testing
+   - Timeout testing
+   - Invalidation testing
+
+3. Analysis:
+   - Vulnerability identification
+   - Risk assessment
+   - Impact analysis
+   - Documentation
+
+4. Validation:
+   - Manual verification
+   - Impact assessment
+   - Remediation recommendations
+```
+
+### Debugging Commands
+
+```bash
+# Verbose curl
+curl -v -b cookies.txt https://target.com/dashboard
+
+# Debug curl
+curl -v -b cookies.txt https://target.com/dashboard
+
+# Test connectivity
+ping target.com
+
+# Test DNS
+nslookup target.com
+
+# Test SSL
+openssl s_client -connect target.com:443
+
+# Test session endpoint
+curl -I https://target.com/dashboard
+
+# Check response headers
+curl -I -b cookies.txt https://target.com/dashboard
+
+# Check response body
+curl -s -b cookies.txt https://target.com/dashboard
+
+# Check for errors
+curl -s -b cookies.txt https://target.com/dashboard | jq '.error'
+
+# Check for success
+curl -s -b cookies.txt https://target.com/dashboard | jq '.success'
+
+# Check cookies
+curl -v -c cookies.txt https://target.com/login
+```
+
+### Common Session Vulnerabilities
+
+```
+Session Fixation:
+- Token not regenerated after authentication
+- Token set before authentication
+- Token predictable
+
+Session Hijacking:
+- Token leakage in URL
+- Token leakage in Referer header
+- Token leakage in custom headers
+- XSS token theft
+
+Weak Tokens:
+- Low entropy
+- Predictable sequence
+- Short length
+- Reuse across sessions
+
+Missing Flags:
+- Missing Secure flag
+- Missing HttpOnly flag
+- Missing SameSite flag
+- Weak Domain/Path settings
+
+Timeout Issues:
+- No idle timeout
+- No absolute timeout
+- Timeout too long
+- Timeout not enforced
+
+Invalidation Issues:
+- Token not invalidated on logout
+- Token not invalidated on password change
+- Token reuse after invalidation
+```
